--- a/cv.css
+++ b/cv.css
@@ -16,9 +16,6 @@ html, body{
     background-color:#FFFFFF;
 } 
 
-
-
-
 .twoColContainer{
     position:relative;
     clear:both;
@@ -85,7 +82,6 @@ html, body{
     font-size:small;
 }
 
-
 h1 {
     font-family: 'Cantarell', Arial, serif;
     margin:0;
@@ -101,7 +97,6 @@ h2 {
     font-size:medium;
 }
 
-
 h3{ 
     font-family: 'Cantarell', Arial, serif;
     margin-left:1em;
@@ -111,16 +106,6 @@ h3{
 p {
     font-size:small;
 }
-
-/* #topinfo ul{ */
-/*     margin-top:0; */
-/* } */
-
-/* #topinfo li { */
-/*     font-size:small; */
-/*     margin-top:0; */
-/* } */
-
 
 li { 
     margin-top:0.5em; 
@@ -141,9 +126,14 @@ ul{
     font-size:x-small;
 }
 
+.pub a:link{
+     color: #333;
+}
+.pub a:visited{
+     color: #333;
+}
+
+
 a{
  color:#586998;
 }
-/* #footer p{ */
-/*     font-size:x-small */
-/* } */
