--- a/cv.css
+++ b/cv.css
@@ -87,14 +87,14 @@ h1 {
     margin:0;
     margin-top:5px;
     margin-bottom:20px;
-    font-size: 36px;
+    font-size: 30px;
 }
 
 h2 {
     margin:0;
     margin-left:5px;
     padding:0;
-    font-size:medium;
+    font-size:small;
 }
 
 h3{ 
